--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -36,6 +36,6 @@ html(lang="en")
             h2.changeyourplan ОБЕРИ СВІЙ 
             p ПЛАН ПОДОРОЖІ
             p Наша фірма – лідер на ринку у своїй сфері
-          img(class="scroll-btm" src="/img/scrollbottom.png", alt="")
+          img(class="scroll-btm" src="/img/scrollbottom.png", alt="scroll")
 
     script(src="js/scripts.js")
