--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
       nav.navbar.navbar-expand-lg.navbar-light.menutop
         .container
           a.navbar-brand(href="#")
-            img.logo(src="/img/sealogo.png", alt="Seatrips")
+            img.logo(src="/img/sealogo.png", alt="")
           button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
             span.navbar-toggler-icon
           #navbarNav.collapse.navbar-collapse
@@ -36,6 +36,6 @@ html(lang="en")
             h2.changeyourplan ОБЕРИ СВІЙ 
             p ПЛАН ПОДОРОЖІ
             p Наша фірма – лідер на ринку у своїй сфері
-          img(class="scroll-btm" src="/img/scrollbottom.png", alt="scroll")
+          img(class="scroll-btm" src="/img/scrollbottom.png", alt="")
 
     script(src="js/scripts.js")
