--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -79,7 +79,6 @@ header
 .seatripstext
   text-align: center
   color: white
-  width: 90%
   max-width: 800px
   margin: 0 auto
   padding-bottom: 60px
@@ -99,21 +98,26 @@ header
   text-align: center
 
 .btn-warning
+  text-transform: uppercase
   padding: 9.5px 39.2px
   border-radius: 25px 
   color: #fff
 
 .btn-warning:hover
+  text-transform: uppercase
   background-color: #3b9aed
   color: #fff
   border-color: #3b9aed
   text-decoration: none
 
 .bluebtn
+  text-transform: uppercase
   border-radius: 25px
   padding: 9.5px 36.2px
+
   
 .subtitle
+  font-style: italic 
   font-size: 18px
   margin-bottom: 30px
 
@@ -155,13 +159,9 @@ header
   h6 
     padding-top: 15px
     font-weight: 450
-
-  
-
+ 
   p 
     margin-bottom: 0.25rem
-  
-
 
 .card.position-relative::before 
   content: ""
@@ -218,6 +218,7 @@ hr
   
 
   .btn 
+    text-transform: uppercase
     background-color: #ffc107
     color: #000
     font-weight: 600
@@ -228,6 +229,7 @@ hr
 
 
 .detail-btn 
+  text-transform: uppercase
   background-color: #ffc107
   color: #fff
   text-decoration: none
@@ -259,6 +261,7 @@ h2
   
 
 .btn
+  text-transform: uppercase
   font-weight: 500
 
 .bg-light
@@ -274,14 +277,19 @@ h2
   
 
   .btn 
+    text-transform: uppercase
     min-width: 160px
     padding: 10px 20px
     font-weight: 600
   
 
   .btn-outline-primary 
+    text-transform: uppercase
     border-width: 2px
   
 
   .bg-light 
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.05)
+
+.sufrefblock
+  background: url('../img/surfer.jpg') no-repeat center/cover
