--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,10 +3,10 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css")
-    link(rel="preconnect", href="https://fonts.googleapis.com")
-    link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
-    link(href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap", rel="stylesheet")
+    link(rel="stylesheet" href="https:cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css")
+    link(rel="preconnect", href="https:fonts.googleapis.com")
+    link(rel="preconnect", href="https:fonts.gstatic.com", crossorigin)
+    link(href="https:fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap", rel="stylesheet")
     link(rel="stylesheet", href="css/styles.css")
     title Seatrips
 
@@ -16,7 +16,7 @@ html(lang="en")
         .container
           a.navbar-brand(href="#")
             img.logo(src="img/sealogo.png", alt="")
-          button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
+          button.navbar-toggler(type="button", data-bs-toggle="collapse", data-bs-target="#navbarNav", aria-controls="navbarNav", aria-expanded="false", aria-label="Toggle navigation")
             span.navbar-toggler-icon
           #navbarNav.collapse.navbar-collapse
             ul.navbar-nav.ml-auto
@@ -44,19 +44,19 @@ html(lang="en")
     .col-lg-3.col-md-12.mb-4.d-flex.flex-column.justify-content-center.text-start
       h2.companytop.mb-2 ПРО НАШУ 
       h2.companytop.mb-3 КОМПАНІЮ
-      p.mb-3.text-muted Наша компанія пропонує ряд цікавих-розважальних послуг, які принесуть вам ряд вражень!
+      p.mb-3.text-mutedcompany Наша компанія пропонує ряд цікавих-розважальних послуг, які принесуть вам ряд вражень!
       a.btn.btn-warning.detail-btn(href="#") ДЕТАЛЬНІШЕ
       p.underbtn * - зверніть увагу, зміна ціни може залежати від курсу долара.
 
-    .col-lg-9.col-md-12
-      .row
+    .col-lg-9
+      .row.justify-content-center
         .col-lg-4.col-md-6.col-sm-12.mb-4
           .card.border-0.text-center.h-100
             .card-body
               include components/bikercard
               h6 Тур на велосипедах
-              p.text-primary.mb-1 335 грн*
-              p.text-muted Подорожі на велосипедах в горах і по лісовому мальовничому маршруту.
+              p.text-primarypricecard.mb-1 335 грн*
+              p.text-mutedcard Подорожі на велосипедах в горах і по лісовому мальовничому маршруту.
 
         .col-lg-4.col-md-6.col-sm-12.mb-4
           .card.border-0.text-center.h-100.position-relative
@@ -64,8 +64,8 @@ html(lang="en")
             .card-body
               include components/circledot
               h6 Екскурсії на острів
-              p.text-primary.mb-1 500 грн*
-              p.text-muted Подорож на острів зарядить вас у найближчий порт.
+              p.text-primarypricecard.mb-1 500 грн*
+              p.text-mutedcard Подорож на острів зарядить вас у найближчий порт.
 
         .col-lg-4.col-md-6.col-sm-12.mb-4
           .card.border-0.text-center.h-100.position-relative
@@ -73,13 +73,53 @@ html(lang="en")
             .card-body
               include components/message
               h6 Особливе замовлення
-              p.text-primary.mb-1 250 грн*
-              p.text-muted Індивідуальне замовлення під ваші побажання.
-
-
-  .row
+              p.text-primarypricecard.mb-1 250 грн*
+              p.text-mutedcard Індивідуальне замовлення під ваші побажання.
+        .row
     .col-12.text-center.custom-spacing
       a.seeallplans(href="#") Дивитись усі плани 
         include components/rightarrow
+      hr
+    .section-hero
+      .container
+        .row 
+          .col-auto
+            img.hero-img.col-12(src="img/Seaisland.webp", alt="Острів")
+          .col.content-block
+            h2.hero-title
+              | ДИВОВИЖНИЙ БЕЗЛЮДНИЙ ОСТРІВ, ЯКИЙ 
+              br
+              | ЗВОДИТЬ ЛЮДЕЙ З РОЗУМУ
+            p.hero-text.col-7
+            p.httxt.col-8 Пхукет - курортно-туристична Мекка Таїланду. Білосніжний пісок, і бірюзове море, і мальовничі скелі, а на них же, трохи вище - буйна тропічна рослинність. Все це можна побачити на власні очі.
+            .hero-buttons.col-6
+              a.btn-order(href="#") ЗАМОВИТИ ТУР
+              a.btn-detail(href="#") ДЕТАЛЬНІШЕ
+            .col-12.col-md-4
+              .bg-light.rounded.text-center.content-block.d-flex.flex-wrap.align-items-end.justify-content-center.price-box
+                h5.text-primaryprice 575 грн./день
+                small.text-muted
+                  | У вартість входить обслуговування, вечеря і захоплюючі історії.
+.section.hero(style="background: url('img/surfer.webp') no-repeat center/cover")
+  .container
+    .row.align-items-center
+      .col-lg-6.text-light
+        h1 СПІЙМАЙ ХВИЛЮ
+          br
+          span.text-primaryunderh1 ЖИВИ ЯСКРАВО!
+        p.mt-3
+          | Полюбляэш екстрим та пригоди? Тоді тобі точно до нас! Мрієш
+          br
+          | стати на сапборд, але ніяк не міг наважитись? Наші досвдчені 
+          br
+          | інструктори навчать тебе вміло «піймати хвилі» та відчути себе 
+          br 
+          | справжнім сьорфером!
+        a.btn.btn-warning.mt-4(href="#") ДЕТАЛЬНІШЕ
+.section.bg-light.py-5
+  .container
+    h2.text-center.mb-5 СПЕЦІАЛЬНІ ПРОПОЗИЦІЇ ТИЖНЯ
+      br
+      span.text-primaryhot Гарячі праозиції, по-швидше обирай і поїхали!
 
-    script(src="js/scripts.js")
+script(src="js/scripts.js")
