--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,10 +3,10 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    link(rel="preconnect", href="https:fonts.googleapis.com")
-    link(rel="preconnect", href="https:fonts.gstatic.com", crossorigin)
-    link(href="https:fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap", rel="stylesheet")
-    link(rel="stylesheet" href="https:cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css")
+    link(rel="preconnect", href="https://fonts.googleapis.com")
+    link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
+    link(href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap", rel="stylesheet")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css")
     link(rel="stylesheet", href="css/styles.css")
     title Seatrips
 
@@ -80,47 +80,64 @@ html(lang="en")
       a.seeallplans(href="#") Дивитись усі плани 
         include components/rightarrow
       hr
-    .section-hero
-      .container
-        .row 
-          .col-auto
-            img.hero-img.col-12(src="img/Seaisland.webp", alt="Острів")
-          .col.content-block
-            h2.hero-title
-              | ДИВОВИЖНИЙ БЕЗЛЮДНИЙ ОСТРІВ, ЯКИЙ 
-              br
-              | ЗВОДИТЬ ЛЮДЕЙ З РОЗУМУ
-            p.hero-text.col-7
-            p.httxt.col-8 Пхукет - курортно-туристична Мекка Таїланду. Білосніжний пісок, і бірюзове море, і мальовничі скелі, а на них же, трохи вище - буйна тропічна рослинність. Все це можна побачити на власні очі.
-            .hero-buttons.col-6
-              a.btn-order(href="#") ЗАМОВИТИ ТУР
-              a.btn-detail(href="#") ДЕТАЛЬНІШЕ
-            .col-12.col-md-4
-              .bg-light.rounded.text-center.content-block.d-flex.flex-wrap.align-items-end.justify-content-center.price-box
-                h5.text-primaryprice 575 грн./день
-                small.text-muted
-                  | У вартість входить обслуговування, вечеря і захоплюючі історії.
-.section.hero(style="background: url('img/surfer.webp') no-repeat center/cover")
+.section-hero.py-5
   .container
     .row.align-items-center
-      .col-lg-6.text-light
-        h1 СПІЙМАЙ ХВИЛЮ
+      // 1. Колонка зображення
+      .col-md-4
+        img(src="img/Seaisland.webp", alt="Острів", class="img-fluid")
+
+      // 2. Колонка тексту
+      .col-md-5
+        h2.hero-title.mb-3 Дивовижний безлюдний острів, який зводить людей з розуму
+        p.hero-subtext.mb-4
+          | Пхукет – курортно-туристична Мекка Таїланду.
           br
-          span.text-primaryunderh1 ЖИВИ ЯСКРАВО!
-        p.mt-3
-          | Полюбляэш екстрим та пригоди? Тоді тобі точно до нас! Мрієш
-          br
-          | стати на сапборд, але ніяк не міг наважитись? Наші досвдчені 
-          br
-          | інструктори навчать тебе вміло «піймати хвилі» та відчути себе 
-          br 
-          | справжнім сьорфером!
-        a.btn.btn-warning.mt-4(href="#") ДЕТАЛЬНІШЕ
-.section.bg-light.py-5
+          | Білосніжний пісок, бірюзове море, і мальовничі скелі, а на них же, трохи вище – буйна тропічна рослинність. Все це можна побачити на власні очі.
+
+        .d-flex.gap-3.align-items-center.flex-wrap
+          a.btn-order(href="#") ЗАМОВИТИ ТУР
+          a.btn-details(href="#") ДЕТАЛЬНІШЕ
+
+      // 3. Колонка ціни (праворуч)
+      .col-md-3
+        .price-card.text-center
+          h5.price-title 575 грн./день
+          p.price-description
+            | В дану вартість входить
+            br
+            | обслуговування персоналу,
+            br
+            | вечері і захоплюючі історії.
+
+.section-surfer
+  .overlay
   .container
-    h2.text-center.mb-5 СПЕЦІАЛЬНІ ПРОПОЗИЦІЇ ТИЖНЯ
-      br
-      span.text-primaryhot Гарячі праозиції, по-швидше обирай і поїхали! 
+    .row
+      .col-md-6.left-content
+        h2.text-uppercase.text-white СПІЙМАЙ ХВИЛЮ
+        h2.text-uppercase.text-primary ЖИВИ ЯСКРАВО!
+        p.description.text-white
+          | Полюбляєш екстрим та пригоди? Тоді тобі точно до нас! Мрієш стати на сапборд, але ніяк не міг наважитись? Наші досвідчені інструктори навчать тебе вміло «піймати хвилю» та відчути себе справжнім серфером!
+        a.btn.btn-warning.mt-3(href="#") ДЕТАЛЬНІШЕ
+      .col-md-6.right-content
+        .testimonial
+          .quote-icon
+            i.fas.fa-quote-right
+          p.text
+            | Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють справжні професіонали своєї справи.
+          .client.d-flex.align-items-center.mt-4
+            img.rounded-circle(src="/img/oleh.png", alt="Олег", width="48", height="48")
+            span.name.text-white.fw-bold.ms-3 Олег Набережний
+
+
+
+
+
+
+
+
+
 
 
 script(src="js/scripts.js")
