--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -30,14 +30,15 @@ html(lang="en")
 
       .seatripstext
         .container
+          .section-border
           p.titletxt морські пригоди 
           p.subtitle Не важливо, чи Ваша мандрівка належить до елітного рівня чи до економваріанту, туроператор S trips потурбується, щоб Ви залишились задоволеними!
           button.btn.btn-warning.bthdetal(type="button") Детальніше
           .scroll-section
             h2.changeyourplan ОБЕРИ СВІЙ 
             h2.plan ПЛАН ПОДОРОЖІ
-            p.firmadesc.small.text-muted Наша фірма – лідер на ринку у своїй сфері
-          img(class="scroll-btm" src="img/scrollbottom.png", alt="")
+            p.firmadesc.small.text-muted Наша фірма – лідер на ринку
+          img.scroll-btm(src="img/scrollbottom.png", alt="")
         .container
 .container.py-5
   .row.align-items-start
@@ -129,6 +130,65 @@ html(lang="en")
           .client.d-flex.align-items-center.mt-4
             img.rounded-circle(src="/img/oleh.png", alt="Олег", width="48", height="48")
             span.name.text-white.fw-bold.ms-3 Олег Набережний
+            
+.cardsbtm.container
+  .row.g-4.justify-content-center
+    .col-12.col-sm-6.col-lg-3.cardbtm
+      .bottom-card
+        .greenflag
+        <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+        img(src="img/romantictrip.png", alt="")
+        .tour-body
+          p.title Романтична подорож на 2
+          p.description.col-lg-12 Подорож у найромантичніші куточки світу, занурить вас у дивовижні пейзажі природи.
+          .bottom-row.d-flex.align-items-center.justify-content-between
+            p.price 2599 грн.
+            a.makeorder(href="#") замовити
+              svg.orangesvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
+
+    .col-12.col-sm-6.col-lg-3.cardbtm
+      .bottom-card
+        .blueflag
+          img.bikertrippht.relatives(src="img/bikertrip.png", alt="")
+          p.sunya.align-items-center
+            <svg class="bikeonbgc" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M400 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm27.2 64l-61.8-48.8c-17.3-13.6-41.7-13.8-59.1-.3l-83.1 64.2c-30.7 23.8-28.5 70.8 4.3 91.6L288 305.1 288 416c0 17.7 14.3 32 32 32s32-14.3 32-32l0-128c0-10.7-5.3-20.7-14.2-26.6L295 232.9l60.3-48.5L396 217c5.7 4.5 12.7 7 20 7l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-52.8 0zM56 384a72 72 0 1 1 144 0A72 72 0 1 1 56 384zm200 0A128 128 0 1 0 0 384a128 128 0 1 0 256 0zm184 0a72 72 0 1 1 144 0 72 72 0 1 1 -144 0zm200 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z"/></svg>
+        .tour-body
+          p.title Велотур
+          p.description.col-lg-12 Бажаєте прокататись з вітерцем, та ще й з критим краєвидом довкола? Тоді швидше замовляй велотур!
+          .bottom-row.d-flex.align-items-center.justify-content-between
+            p.price 555 грн.
+            a.makeorder(href="#") замовити
+              svg.orangesvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
+          .greenflag
+          <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+
+    .col-12.col-sm-6.col-lg-3.cardbtm
+      .bottom-card
+        img(src="img/trees.png", alt="")
+        .greenflag
+        <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+        .tour-body
+          p.title На острови!
+          p.description.col-lg-12 Хочеш зануритись у тишу, місце де не має натовпу, та панує дика природа? Тоді вперед за пригодами!
+          .bottom-row.d-flex.align-items-center.justify-content-between
+            p.price 1559 грн.
+            a.makeorder(href="#") замовити
+              svg.orangesvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
+    .col-12.col-sm-6.col-lg-3.kartka
+      .bottom-card
+        .greenflag
+        <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
+        img(src="img/surfer2.png", alt="")
+        .tour-body
+          p.title Катання на сьорфінгу
+          p.description.col-lg-12 Хочеш отримати екстрим та мега вражень одночасно? Тоді вперед ловити хвилі!
+          .bottom-row.d-flex.align-items-center.justify-content-between
+            p.price 999 грн.
+            a.makeorder(href="#") замовити
+              svg.orangesvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
+
+
+
 
 
 
