--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -84,11 +84,9 @@ html(lang="en")
 .section-hero.py-5
   .container
     .row.align-items-center
-      // 1. Колонка зображення
       .col-md-4
         img(src="img/Seaisland.webp", alt="Острів", class="img-fluid")
 
-      // 2. Колонка тексту
       .col-md-5
         h2.hero-title.mb-3 Дивовижний безлюдний острів, який зводить людей з розуму
         p.hero-subtext.mb-4
@@ -100,7 +98,6 @@ html(lang="en")
           a.btn-order(href="#") ЗАМОВИТИ ТУР
           a.btn-details(href="#") ДЕТАЛЬНІШЕ
 
-      // 3. Колонка ціни (праворуч)
       .col-md-3
         .price-card.text-center
           h5.price-title 575 грн./день
@@ -118,27 +115,30 @@ html(lang="en")
       .col-md-6.left-content
         h2.text-uppercase.text-white СПІЙМАЙ ХВИЛЮ
         h2.text-uppercase.text-primary ЖИВИ ЯСКРАВО!
-        p.description.text-white
+        p.description.text-white.col-lg-8
           | Полюбляєш екстрим та пригоди? Тоді тобі точно до нас! Мрієш стати на сапборд, але ніяк не міг наважитись? Наші досвідчені інструктори навчать тебе вміло «піймати хвилю» та відчути себе справжнім серфером!
-        a.btn.btn-warning.mt-3(href="#") ДЕТАЛЬНІШЕ
+        a.btn.btn-warning.mt-3.mb-5(href="#") ДЕТАЛЬНІШЕ
       .col-md-6.right-content
         .testimonial
           .quote-icon
-            i.fas.fa-quote-right
-          p.text
+          img.suka(src="img/lapiki.svg", alt="")
+          p.textoleg
             | Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють справжні професіонали своєї справи.
-          .client.d-flex.align-items-center.mt-4
-            img.rounded-circle(src="/img/oleh.png", alt="Олег", width="48", height="48")
-            span.name.text-white.fw-bold.ms-3 Олег Набережний
+          .client.mt-4
+            img.olegshka(src="/img/olegshka.svg", alt="Олег", width="86", height="86")
+            span.name.text-white.ms-3.olegname Олег Набережний
+            p.underolegtxt клієнт
             
 .cardsbtm.container
+  h1.bottomblock Спеціальні пропозиції тижня 
+  p.bottomh1blc Гарячі праозиції, по-швидше обирай і поїхали!
   .row.g-4.justify-content-center
     .col-12.col-sm-6.col-lg-3.cardbtm
       .bottom-card
         .greenflag
         <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
         img(src="img/romantictrip.png", alt="")
-        .tour-body
+        .bottom-body
           p.title Романтична подорож на 2
           p.description.col-lg-12 Подорож у найромантичніші куточки світу, занурить вас у дивовижні пейзажі природи.
           .bottom-row.d-flex.align-items-center.justify-content-between
@@ -147,12 +147,12 @@ html(lang="en")
               svg.orangesvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
 
     .col-12.col-sm-6.col-lg-3.cardbtm
-      .bottom-card
+      .bottom-card 
         .blueflag
-          img.bikertrippht.relatives(src="img/Bikertrip.png", alt="")
-          p.sunya.align-items-center
-            <svg class="bikeonbgc" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M400 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm27.2 64l-61.8-48.8c-17.3-13.6-41.7-13.8-59.1-.3l-83.1 64.2c-30.7 23.8-28.5 70.8 4.3 91.6L288 305.1 288 416c0 17.7 14.3 32 32 32s32-14.3 32-32l0-128c0-10.7-5.3-20.7-14.2-26.6L295 232.9l60.3-48.5L396 217c5.7 4.5 12.7 7 20 7l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-52.8 0zM56 384a72 72 0 1 1 144 0A72 72 0 1 1 56 384zm200 0A128 128 0 1 0 0 384a128 128 0 1 0 256 0zm184 0a72 72 0 1 1 144 0 72 72 0 1 1 -144 0zm200 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z"/></svg>
-        .tour-body
+            img(src="img/bikertrip.png", alt="")
+            p.rebellious.align-items-center
+              <svg class="bikeonbgc" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M400 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm27.2 64l-61.8-48.8c-17.3-13.6-41.7-13.8-59.1-.3l-83.1 64.2c-30.7 23.8-28.5 70.8 4.3 91.6L288 305.1 288 416c0 17.7 14.3 32 32 32s32-14.3 32-32l0-128c0-10.7-5.3-20.7-14.2-26.6L295 232.9l60.3-48.5L396 217c5.7 4.5 12.7 7 20 7l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-52.8 0zM56 384a72 72 0 1 1 144 0A72 72 0 1 1 56 384zm200 0A128 128 0 1 0 0 384a128 128 0 1 0 256 0zm184 0a72 72 0 1 1 144 0 72 72 0 1 1 -144 0zm200 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z"/></svg>
+        .bottom-body
           p.title Велотур
           p.description.col-lg-12 Бажаєте прокататись з вітерцем, та ще й з критим краєвидом довкола? Тоді швидше замовляй велотур!
           .bottom-row.d-flex.align-items-center.justify-content-between
@@ -167,7 +167,7 @@ html(lang="en")
         img(src="img/Trees.png", alt="")
         .greenflag
         <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
-        .tour-body
+        .bottom-body
           p.title На острови!
           p.description.col-lg-12 Хочеш зануритись у тишу, місце де не має натовпу, та панує дика природа? Тоді вперед за пригодами!
           .bottom-row.d-flex.align-items-center.justify-content-between
@@ -179,25 +179,55 @@ html(lang="en")
         .greenflag
         <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
         img(src="img/surfer2.png", alt="")
-        .tour-body
-          p.title Катання на сьорфінгу
+        .bottom-body
+          p.title  Катання на сьорфінгу
           p.description.col-lg-12 Хочеш отримати екстрим та мега вражень одночасно? Тоді вперед ловити хвилі!
           .bottom-row.d-flex.align-items-center.justify-content-between
             p.price 999 грн.
             a.makeorder(href="#") замовити
               svg.orangesvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
+  hr      
+  .container
+    .row
+      .col-xs-12.col-lg-3.px-0
+        h2.aboutus Додаткова інформація
+      .col-12.col-md-6.col-lg-3.veda
+        .firstfooter-card
+          .d-flex
+            img.cardbgc
+            img.filesvg(src="img/file.svg", alt="")
+            h2.infa Графік роботи готелів.xls
+          .idklol
+            p.small.sizefile Розмір файла: 10Mb
+            p.undersffirst Розклад роботи усіх наших готелів, можете знайти за цим посиланням. Та додатково завантажити їх фото.
+            a.btn.btn-warning.btnfooter(href="#") 
+              <svg class="cloudfirst" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>
+              | Скачати
+      .col-12.col-md-6.col-lg-3
+        .firstfooter-card2.mb-3
+          .bgccard.d-flex
+            img.cardbgc2
+            img.filesvg(src="img/file.svg", alt="")
+            h2.infa Інформація про харчування.xls
+          .idklol
+            p.small.sizefile Розмір файла: 10Mb
+            p.undersf У будь-якому нашому турі включені сніданки у вартість. Якщо ж бажаєте замовити додатково, то ознайомтесь з умовами.
+            a.btn.btn-warning.btnfooter(href="#")
+              <svg class="cloud2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>
+              | Скачати
+      .col-12.col-lg-3
+        .anna-card.text-center
+          h3.question задати питання
+          p.saygoodday.col-lg-9.mx-auto Скажіть доброго для нашого консультанту, і ми з радістю відповімо на Ваші запитання
+          a.phonetxt(href="tel:+380505698511") 
+            svg.phonesvg(xmlns="http://www.w3.org/2000/svg", viewBox="0 0 512 512")
+              path(d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64 0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z")
+            | +38 (050) 56 98 511
+          p.anna Анна Миколаївна
+          p.annatext консультант
+          img.annasvg(src="img/anna.svg", alt="")
+.footertop
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.footerblock
+  .footer-text  © 2016 Cars.com All rights reserved.
 script(src="js/scripts.js")
